--- a/index.html
+++ b/index.html
@@ -2,3 +2,15 @@
 layout: default
 title: home
 ---
+<h2>Posts:</h2>
+<ul>
+{% for post in site.posts %}
+  {% if post.published != false %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      &mdash;
+      {{ post.date | date: "%B %e, %Y" }}
+    </li>
+  {% endif %}
+{% endfor %}
+</ul>
