--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@ title: home
 ---
 <ul class = "posts">
 <br/>
-This is a collection of writing by a professional programmer living in Brooklyn, New York, with his family. It's mostly about technology.<br/><br/>
-
 {% for post in site.posts %}
   {% if post.published != false %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      &mdash;
-      {{ post.date | date: "%B %e, %Y" }}
+    <li class="index">
+      <div class="index-date">{{ post.date | date: "%B %e, %Y" }}</div><a href="{{ post.url }}">{{ post.title }}</a>
+      {% if post.ctm %}<b><i>**</i></b>{% endif %}
+      {% if post.gc %}<b><i>*</i></b>{% endif %}
     </li>
   {% endif %}
 {% endfor %}
 </ul>
+
+<b><i>Blog Series:</b></i> &nbsp;&nbsp; <b>*</b> Garbage Collection &nbsp;&nbsp;&nbsp; <b>**</b>Concepts, Techniques, and Models
+
