Dist sys Part One

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: home
 ---
 <br/>
-Hello, my name is <b>Michael R. Bernstein</b> and this is my technical blog. The posts are divided into sections below, because that is how I tend to write - for a period about one subject at a time.
+Hello, my name is <b>Michael R. Bernstein</b> and this is my personal blog. The posts are divided into sections below, because that is how I tend to write - for a period about one subject at a time.
 <br/>
 <br/>
 <h1>Distributed Systems Archaeology</h1>
