--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Hello, my name is <b>Michael R. Bernstein</b> and this is my personal blog. The 
 <br/>
 <br/>
 <h1>Distributed Systems Archaeology</h1>
-<div class="lead">Currently I am doing research for a talk called at <a href="http://ricon.io/west.html">Ricon West</a> titled "Distributed Systems Archaeology." These posts will cover concurrency and distributed computing theory and practice.</div>
+<div class="lead">I gave a talk at <a href="http://ricon.io/west.html">Ricon West</a> in October 2013 called "Distributed Systems Archaeology." This section contains one article written during research, and the available resources documenting the talk, including a written transcript.</div>
 <ul class = "posts">
 {% for post in site.posts %}
     {% if post.published and post.dsa %}
