--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@ Hello, my name is <a href="/about.html">Michael R. Bernstein</a> and this is my 
 {% endfor %}
 </ul>
 
+<h1>Distraction Accrection</h1>
+<div class="lead">I don't know what to expect in terms of what will show up here, but I know I need this section.</div>
+<ul class = "posts">
+{% for post in site.posts %}
+  {% if post.published and post.other %}
+    <li class="index">
+      <div class="index-date">{{ post.date | date: "%Y.%m.%d" }}</div><a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endif %}
+{% endfor %}
+</ul>
+
 <h1>Concepts, Techniques, and Models</h1>
 <div class="lead">I am working my way through <a href="http://www.info.ucl.ac.be/~pvr/book.html">Concepts, Techniques, and Models of Computer Programming</a> and writing about as much of it as I can. These posts are my take on a very dense and rewarding book.</div>
 <ul class = "posts">
@@ -64,17 +76,5 @@ Hello, my name is <a href="/about.html">Michael R. Bernstein</a> and this is my 
       <div class="index-date">{{ post.date | date: "%Y.%m.%d" }}</div><a href="{{ post.url }}">{{ post.title }}</a>
     </li>
     {% endif %}
-{% endfor %}
-</ul>
-
-<h1>Everything Else</h1>
-<div class="lead">I don't know what to expect in terms of what will show up here, but I know I need this section.</div>
-<ul class = "posts">
-{% for post in site.posts %}
-  {% if post.published and post.other %}
-    <li class="index">
-      <div class="index-date">{{ post.date | date: "%Y.%m.%d" }}</div><a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-  {% endif %}
 {% endfor %}
 </ul>
