--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Hello, my name is <a href="/about.html">Michael R. Bernstein</a> and this is my 
 {% endfor %}
 </ul>
 
-<h1>Distraction Accrection</h1>
+<h1>Distraction Accretion</h1>
 <div class="lead">I don't know what to expect in terms of what will show up here, but I know I need this section.</div>
 <ul class = "posts">
 {% for post in site.posts %}
