Sales for engineers, 1-50

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Hello, my name is <a href="/about.html">Michael R. Bernstein</a> and this is my 
 <br/>
 <br/>
 
-<h1>Types and Programming Languages</h1>
+<h1 id="i-tapl">Types and Programming Languages</h1>
 <div class="lead"><a href="http://www.cis.upenn.edu/~bcpierce/tapl/">Benjamin C. Pierce's tome</a> formalizes type systems and offers a different perspective to understanding computation. Notoriously dense, I am slowly making my way through and posts here will likely be sporadic.</div>
 <ul class = "posts">
 {% for post in site.posts %}
