--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: about
 ---
 
 <br/>
-Michael R. Bernstein is a Brooklyn, New York based software developer and computer science enthusiast. Contact information for inquiries of any kind can be found below.
+Michael R. Bernstein is a College Park, MD based software developer and computer science enthusiast. Contact information for inquiries of any kind can be found below.
