--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: home
 </ul>
 
 <h1>Programs That Eat Programs</h1>
-<div class="lead">General blog posts.</div>
+<div class="lead">Explorations in abstract interpretation, static analysis, concrete interpretation, and more.</div>
 <ul class = "posts">
 {% for post in site.posts %}
   {% if post.published and post.hungry %}
