Make header small

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: home
 ---
-<p style="font-size: 36px; line-height:46px; font-weight: normal;">Hello, my name is <a href="/about.html">Michael R. Bernstein</a> and this is my personal blog. Here you'll find my talks and presentations, general blog posts, mixes and other sounds, posts on TAPL and CTM, and more. I hope you enjoy!</p>
+<p style="font-size: 36px; line-height:46px; font-weight: normal;">Hello, my name is <a href="/about.html">Michael R. Bernstein</a> and this is my personal blog. I hope you enjoy!</p>
 
 <h1>Talks and Presentations</h1>
 <div class="lead">Slides, videos, and transcripts from talks I've given.</div>
