--- a/pizza-trip/index.html
+++ b/pizza-trip/index.html
@@ -112,6 +112,9 @@ html, body {
 
   <body>
 
+    <div class='info'>
+  <hgroup class='about'><h3>Code from <a href="http://codepen.io/soulwire/full/pwchL">Codepen by Justin Windle</a></hgroup>
+</div>
     <script src='http://dat-gui.googlecode.com/git/build/dat.gui.min.js'></script>
 
         <script src="js/index.js"></script>
