--- a/pizza-trip/index.html
+++ b/pizza-trip/index.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Kaleidoscope (Drag & Drop)</title>
+    <title>PIZZA TRIP</title>
     <link href='http://fonts.googleapis.com/css?family=Quantico:400' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="css/reset.css">
