--- a/face.html
+++ b/face.html
@@ -1,5 +1,5 @@
 <p>
-  <center><img src="images/face/face.jpg"></center>
+  <center><img src="images/face/face.jpg" width="800"></center>
 </p>
 
 <p>
