--- a/face.html
+++ b/face.html
@@ -3,29 +3,29 @@
 </p>
 
 <p>
-  <center><img src="images/face/2.png"></center>
+  <center><img src="images/face/2.png" width="800"></center>
 </p>
 
 <p>
-  <center><img src="images/face/3.png"></center>
+  <center><img src="images/face/3.png" width="800"></center>
 </p>
 
 <p>
-  <center><img src="images/face/4.png"></center>
+  <center><img src="images/face/4.png" width="800"></center>
 </p>
 
 <p>
-  <center><img src="images/face/5.png"></center>
+  <center><img src="images/face/5.png" width="800"></center>
 </p>
 
 <p>
-  <center><img src="images/face/6.png"></center>
+  <center><img src="images/face/6.png" width="800"></center>
 </p>
 
 <p>
-  <center><img src="images/face/7.png"></center>
+  <center><img src="images/face/7.png" width="800"></center>
 </p>
 
 <p>
-  <center><img src="images/face/8.png"></center>
+  <center><img src="images/face/8.png" width="800"></center>
 </p>
