--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: about
+title: About
 ---
 
 <br/>
-Michael R. Bernstein is a Takoma Park, MD based sound collector, software developer and computer science enthusiast. Contact information for inquiries of any kind can be found below.
+Michael R. Bernstein lives in Takoma Park, MD with his family. Contact information for inquiries of any kind can be found below.
