--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 layout: default
 title: home
 ---
-<p style="font-size: 36px; line-height:46px; font-weight: normal;">Hello, my name is <a href="/about.html">Michael R. Bernstein</a> and this is my personal blog. I hope you enjoy!</p>
+<p style="font-size: 24px; line-height:36px; font-weight: normal;">Hi! I'm <i>Michael R. Bernstein</i>. I do lots of different things:
 
-<ul class = "posts">
-{% for post in site.posts %}
-    <li class="index">
-      <div class="index-date">{{ post.date | date: "%Y.%m.%d" }}</div><a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-{% endfor %}
-</ul>
+<br/><br/>
+I'm a <a href="/music.html">Musician</a>, a <a href="/cw.html">Creative Writer</a>, a <a href="/tw.html">Technical & Business Writer</a>, a <a href="/research.html">Researcher</a>, and I Own a <a href="http://homerulerecords.com">Record Shop</a> and a <a href="http://reifyworks.com">Consulting Business</a>. Also I wrote a <a href="http://make.pizza">book about pizza</a>.
+<br/><br/>
+Follow any of the links above to learn more, or reach me at the contact info below.
