--- a/research.html
+++ b/research.html
@@ -16,6 +16,6 @@ to study with some amazing folks, including <a href="http://flong.com">Golan Lev
 <center><img src="images/thesis-ui.png" width="600px;"></center>
 
 <br/><br/>
-M thesis, entitled <i>Audiovisual Granular Synthesis for Composition and Performance</i>, presents a novel
+My thesis, entitled <i>Audiovisual Granular Synthesis for Composition and Performance</i>, presents a novel
 system for pairing audio and visual signals in the context of granular synthesis. This was the first thesis
 to present this idea. You can find the full text of my thesis in <a href="pdf/mrbthesis.pdf">PDF format here</a>.
