--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@ title: home
 <p style="font-size: 24px; line-height:36px; font-weight: normal;">Hi! I'm <i>Michael R. Bernstein</i>. I do lots of different things:
 
 <br/><br/>
-I'm a <a href="/music.html">Musician</a>, a <a href="/cw.html">Creative Writer</a>, a <a href="/tw.html">Technical & Business Writer</a>, a <a href="/research.html">Researcher</a>, and I Own a <a href="http://homerulerecords.com">Record Shop</a> and a <a href="http://reifyworks.com">Consulting Business</a>. Also I wrote a <a href="http://make.pizza">book about pizza</a>.
+I'm a <a href="/music.html">musician</a>, a <a href="/cw.html">creative writer</a>,
+a <a href="/tw.html">technical & business writer</a>,
+a <a href="/research.html">researcher</a>,
+and I own a <a href="http://homerulerecords.com">record shop</a> and
+a <a href="http://reifyworks.com">consulting business</a>. Also I wrote a
+<a href="http://make.pizza">book about pizza</a>.
 <br/><br/>
 Follow any of the links above to learn more, or reach me at the contact info below.
