--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ title: home
 <p style="font-size: 24px; line-height:36px; font-weight: normal;">Hi! I'm <i>Michael R. Bernstein</i>. I do lots of different things:
 
 <br/><br/>
-I'm a <a href="/music.html">musician</a>, a <a href="/cw.html">creative writer</a>,
+I'm a <a href="/cw.html">creative writer</a>,
+a <a href="/music.html">musician</a>,
 a <a href="/tw.html">technical & business writer</a>,
 a <a href="/research.html">researcher</a>,
 and I own a <a href="http://homerulerecords.com">record shop</a> and
