--- a/writing/10-rules.html
+++ b/writing/10-rules.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Creative Writing
+title: 10 Rules for Editing Personal Essays
 ---
 
 <h3>10 Rules for Editing Personal Essays</h3>
