--- a/cw.html
+++ b/cw.html
@@ -8,7 +8,7 @@ title: Creative Writing
 </p>
 
 <p style="font-size: 18; line-height:36px; font-weight: normal;">
-I've been writing creativey for pleasure my entire life, but only recently started trying to share and publish more.
+I've been writing creatively for pleasure my entire life, but only recently started trying to share and publish more.
 </p>
 
 <b>Essays</b><br/>
