--- a/cw.html
+++ b/cw.html
@@ -12,6 +12,7 @@ I've been writing creatively for pleasure my entire life, but only recently star
 </p>
 
 <b>Essays</b><br/>
+<i>"Preserved Lemons"</i> <a href="writing/preserved-lemons">Self-published 4/21/21.</a><br/>
 <i>"Built for Dreaming"</i> <a href="writing/built-for-dreaming">Self-published 4/14/21.</a><br/>
 <i>"10 Rules for Editing Personal Essays"</i> <a href="writing/10-rules">Self-published 4/7/21.</a>
 
