--- a/weekly.html
+++ b/weekly.html
@@ -11,21 +11,21 @@ I'm currently attempting to publish an essay per week until I reach 50. If you'r
 </p>
 
 <p>
-  28 April 2021 <a href="writing/the-taste">"The Taste of the Himalayas"</a><br/>
-  <i>I thought Coors Light tasted like Nag Champa until I was 18, because at 13 my first sip of  it was in a room suffocatingly thick with incense smoke...</i>
+  <span style="font-size: 14px;">28 April 2021 </span><br/><a href="writing/the-taste"><b>"The Taste of the Himalayas"</b></a><br/>
+  <i>I thought Coors Light tasted like Nag Champa from the age of 13, when I took my first sip in my friend George’s room, suffocatingly thick with smoke from incense...</i>
 </p>
 
 <p>
-  21 April 2021 <a href="writing/preserved-lemons">"Preserved Lemons"</a><br/>
+  <span style="font-size: 14px;">21 April 2021</span><br/> <a href="writing/preserved-lemons"><b>"Preserved Lemons"</b></a><br/>
   <i>The first time I dropped a mug and broke it, I was shocked by the lack of drama. Thick, factory made ceramic breaks nothing like dropping a glass...</i>
 </p>
 
 <p>
-  14 April 2021 <a href="writing/built-for-dreaming">"Built for Dreaming"</a><br/>
+  <span style="font-size: 14px;">14 April 2021 </span><br/><a href="writing/built-for-dreaming"><b>"Built for Dreaming"</b></a><br/>
   <i>I learn how to ride a bicycle when we remove my training wheels and my brother balances me at the top of the driveway and lets me go...</i>
 </p>
 
 <p>
-  07 April 2021 <a href="writing/10-rules">"10 Rules for Editing Personal Essays"</a><br/>
+  <span style="font-size: 14px;">07 April 2021</span><br/><a href="writing/10-rules"><b>"10 Rules for Editing Personal Essays"</b></a><br/>
   <i>Caring for a Raspberry bushes is confusing — they’re not like other plants. Applying the same rules to Rubus that you do to any other plant is asking for trouble...</i>
 </p>
