--- a/cw.html
+++ b/cw.html
@@ -11,10 +11,30 @@ title: Creative Writing
 I've been writing creatively for pleasure my entire life, but only recently started trying to share and publish more.
 </p>
 
-<b>Essays</b><br/>
-<i>"Preserved Lemons"</i> <a href="writing/preserved-lemons">Self-published 4/21/21.</a><br/>
-<i>"Built for Dreaming"</i> <a href="writing/built-for-dreaming">Self-published 4/14/21.</a><br/>
-<i>"10 Rules for Editing Personal Essays"</i> <a href="writing/10-rules">Self-published 4/7/21.</a>
+<p style="font-size: 18; line-height:36px; font-weight: normal;">
+I'm currently attempting to publish an essay per week until I complete 50 of them. If you're following along and like what you're reading, want to encourage me, etc., please reach out!
+</p>
+
+<p>
+  <span style="font-size: 14px;">28 April 2021 </span><br/><a href="writing/the-taste"><b>"The Taste of the Himalayas"</b></a><br/>
+  <i>I thought Coors Light tasted like Nag Champa from the age of 13, when I took my first sip in my friend George’s room, suffocatingly thick with smoke from incense...</i>
+</p>
+
+<p>
+  <span style="font-size: 14px;">21 April 2021</span><br/> <a href="writing/preserved-lemons"><b>"Preserved Lemons"</b></a><br/>
+  <i>The first time I dropped a mug and broke it, I was shocked by the lack of drama. Thick, factory made ceramic breaks nothing like dropping a glass...</i>
+</p>
+
+<p>
+  <span style="font-size: 14px;">14 April 2021 </span><br/><a href="writing/built-for-dreaming"><b>"Built for Dreaming"</b></a><br/>
+  <i>I learn how to ride a bicycle when we remove my training wheels and my brother balances me at the top of the driveway and lets me go...</i>
+</p>
+
+<p>
+  <span style="font-size: 14px;">07 April 2021</span><br/><a href="writing/10-rules"><b>"10 Rules for Editing Personal Essays"</b></a><br/>
+  <i>Caring for a Raspberry bushes is confusing — they’re not like other plants. Applying the same rules to Rubus that you do to any other plant is asking for trouble...</i>
+</p>
+
 
 <br/><br/>
 
