--- a/cw.html
+++ b/cw.html
@@ -12,6 +12,12 @@ I've been writing creatively for pleasure my entire life, but only recently star
 I'm currently attempting to publish an essay per week until I complete 50 of them. If you're following along and like what you're reading, want to encourage me, etc., please reach out!
 </p>
 
+
+<p>
+  <span style="font-size: 14px;">5 May 2021 </span><br/><a href="writing/the-taste"><b>"We All Grow Eyes"</b></a><br/>
+  <i>In the early 90s on Sundays my Dad and I drive into Manhattan from south shore Long Island to do the one thing we can always do happily together — eat....</i>
+</p>
+
 <p>
   <span style="font-size: 14px;">28 April 2021 </span><br/><a href="writing/the-taste"><b>"The Taste of the Himalayas"</b></a><br/>
   <i>I thought Coors Light tasted like Nag Champa from the age of 13, when I took my first sip in my friend George’s room, suffocatingly thick with smoke from incense...</i>
