--- a/cw.html
+++ b/cw.html
@@ -14,7 +14,7 @@ I'm currently attempting to publish an essay per week until I complete 50 of the
 
 
 <p>
-  <span style="font-size: 14px;">5 May 2021 </span><br/><a href="writing/the-taste"><b>"We All Grow Eyes"</b></a><br/>
+  <span style="font-size: 14px;">5 May 2021 </span><br/><a href="writing/we-all-grow-eyes"><b>"We All Grow Eyes"</b></a><br/>
   <i>In the early 90s on Sundays my Dad and I drive into Manhattan from south shore Long Island to do the one thing we can always do happily together — eat....</i>
 </p>
 
