--- a/writing/we-all-grow-eyes.html
+++ b/writing/we-all-grow-eyes.html
@@ -32,8 +32,9 @@ title: We All Grow Eyes
 <p>	The night crescendoes as our potato fueled idiocy causes us to provoke some also drunken older revelers to chase us and scream profanities and threats as us. We evade danger by diving into some bushes and cover our faces with our jackets as they run by. Potatoes in sacks with mud in our eyes. </p>
 <p>*  *  * </p>
 <p>	I learn how to make pierogi on the occasion of my parents coming to visit us in Maryland for the first time since the COVID-19 Pandemic started. It’s been 18 months since they last visited. 25 years since Teresa’s. I want to make something special. </p>
-<p>	We get busy, my car breaks down. The kids want to go out to eat. We have leftovers. We gets tired. Mom’s eating special food. </p>
-<p>	They leave and I feel contented but something bothers me. I can’t put my finger on it until I realize, I didn’t make the pierogi. I fret, catastrophize, wonder about when I’ll have another chance. I had the Teresa’s story all lined up. I hate missing a plan. I take a deep breath. I close my eyes. </p>
+<p>	We get busy, my car breaks down. The kids want to go out to eat. We have leftovers. We get tired. Mom’s eating special food. </p>
+<p>	They leave and I feel contented but something bothers me. I can’t put my finger on it until I realize, I didn’t make the pierogi. I fret, catastrophize, wonder about when I’ll have another chance. I had the Teresa’s story all lined up. I hate fucking up a plan. I take a deep breath. I close my eyes. </p>
 <p>	I remember that I made chicken soup that made them smile. </p>
-<p>	I made some kreplach on a whim, everyone ate them. </p>
-<p>	What matters? We all shared a meal. It was good to see them again. To feel families coming together again. I felt like a potato. Eventually, we all grow eyes. </p>
+<p>	I made some kreplach on a whim, and everyone ate them, the kids and the grandparents too. </p>
+<p>	What matters? We all shared a meal. It was good to see them again. To feel families coming together again.</p>
+  <p>After my heart calmed down, so did my mind. I felt like a potato. Eventually, we all grow eyes. </p>
