--- a/cw.html
+++ b/cw.html
@@ -14,8 +14,13 @@ I'm currently attempting to publish an essay per week until I complete 50 of the
 
 
 <p>
+  <span style="font-size: 14px;">12 May 2021 </span><br/><a href="writing/something-invisible"><b>"Something Invisible"</b></a><br/>
+  <i>Scotty McTape, the rascally-but-helpful, tartan-clad, kilt-wearing kid, was the 1940s era mascot for 3M’s adhesive products, which were named "Scotch" to invoke a stereotype based on Scottish nationality...</i>
+</p>
+
+<p>
   <span style="font-size: 14px;">5 May 2021 </span><br/><a href="writing/we-all-grow-eyes"><b>"We All Grow Eyes"</b></a><br/>
-  <i>In the early 90s on Sundays my Dad and I drive into Manhattan from south shore Long Island to do the one thing we can always do happily together — eat....</i>
+  <i>In the early 90s on Sundays my Dad and I drive into Manhattan from south shore Long Island to do the one thing we can always do happily together — eat...</i>
 </p>
 
 <p>
