--- a/writing/something-invisible.html
+++ b/writing/something-invisible.html
@@ -12,7 +12,7 @@ title: Something Invisible
 <p>	A company can make a whole country disappear.</p>
 <p></p>
 <p>*  *  *</p>
-<p>	I daydream an alternate universe Scotty McTape named Fivel Tapestein, the scheming Jewish villain of the Philip K. Dick nightmarish The Man in the High Castle reality that seems to be creeping closer every day, and it makes me want to disappear.</p>
+<p>	I daydream an alternate universe Scotty McTape named Fivel Tapestein, the scheming Jewish villain of the Philip K. Dick nightmarish <i>The Man in the High Castle</i> reality that seems to be creeping closer every day, and it makes me want to disappear.</p>
 <p></p>
 <p>*  *  *</p>
 <p>	Being invisible is different from disappearing.</p>
@@ -33,7 +33,7 @@ title: Something Invisible
 <p>	Instead of being flooded with musical memories from the show, I’m instantly transported back to the night that I made the flyer. Not the event itself, but the random piece of paper I made to announce it, that ended up commemorating it.</p>
 <p></p>
 <p>*  *  *</p>
-<p>	I take the Still Life LP cover and several pages I printed out — the names of the bands, where they’re from, precise directions to the venue, my name and phone number, shit like that, and bring them with me along with a roll of Scotch Tape to the Exxon gas station with the giant tiger head statue in the parking lot. It has a mini Subway restaurant inside and a publicly available copy machine that operates on the honors system, making it much easier to scam than Kinko’s. Plus it smells like Subway bread and I have a fondness for the place ever since the cashier didn’t bust my friend when a cop was behind him in line and he accidentally pulled out a huge bag of weed when he was paying for his gatorade.</p>
+<p>	I take the Still Life LP cover and several pages I printed out — the names of the bands, where they’re from, precise directions to the venue, my name and phone number, shit like that, and bring them with me along with a roll of Scotch Tape to the Exxon gas station with the giant tiger head statue in the parking lot. It has a mini Subway restaurant inside and a publicly available copy machine that operates on the honors system, making it much easier to scam than Kinko’s. Plus it smells like Subway bread and I have a fondness for the place ever since the cashier didn’t bust my friend when a cop was behind him in line and he accidentally pulled out a huge bag of weed when he was paying for his Gatorade.</p>
 <p>	I rummage around the copy machine and find an inventory form for the store that lists some items and their prices — “evidence,” I think to myself. I take the tape and start layering different words, the directions, the band names, using more and more tape until when I rub my hand back and forth I feel dozens of tiny sloping variations, my fingertips smoothly rolling over this calm icy plain. When I’m happy with the layout I start to make copies, rearranging things until they feel right.</p>
 <p>	I look at the result and notice that I can’t see the tape anymore — it disappears into the layers, the act of copying flattening space and time, creating a document that looks like it spontaneously grew on the paper like an elaborate inky rash.</p>
 <p></p>
