--- a/cw.html
+++ b/cw.html
@@ -7,9 +7,13 @@ title: Creative Writing
 <i>Creative Writing</i>
 </p>
 
-<p style="font-size: 18; line-height:36px; font-weight: normal;">
-I've been writing creatively for pleasure my entire life, but only recently started trying to share and publish more.
-I'm currently attempting to publish an essay per week until I complete 50 of them. If you're following along and like what you're reading, want to encourage me, etc., please reach out!
+
+<b>Weekly Essays</b><br/>
+
+
+<p>
+  <span style="font-size: 14px;">19 May 2021 </span><br/><a href="writing/how-not-to"><b>"How Not to Impress a Magician"</b></a><br/>
+  <i>The word that makes me realize I don’t know every word is abattoir...</i>
 </p>
 
 
