--- a/cw.html
+++ b/cw.html
@@ -3,13 +3,21 @@ layout: default
 title: Creative Writing
 ---
 
-<p style="font-size: 24px; line-height:36px; font-weight: bold;">
+<span style="font-size: 24px; line-height:36px; font-weight: bold;">
 <i>Creative Writing</i>
-</p>
-
-
+</span>
+<br/><br/>
 <b>Weekly Essays</b><br/>
+An essay per week for 50 weeks.
+<form name="mailinglist" netlify>
+  <p style="font-size: 16px; line-height:24px; font-weight: bold;">
+    <i>Join the list and get an essay by email every week.</i>
+    <br/>
+    <label>Email <input type="email" name="email" /></label>
 
+    <button type="submit">Join</button>
+  </p>
+</form>
 
 <p>
   <span style="font-size: 14px;">19 May 2021 </span><br/><a href="writing/how-not-to"><b>"How Not to Impress a Magician"</b></a><br/>
