--- a/cw.html
+++ b/cw.html
@@ -13,7 +13,7 @@ An essay per week for 50 weeks.
   <p style="font-size: 16px; line-height:24px; font-weight: bold;">
     <i>Join the list and get an essay by email every week.</i>
     <br/>
-    <label>Email <input type="email" name="email" /></label>
+    <label> <input type="email" name="email" default="Your@email" /></label>
 
     <button type="submit">Join</button>
   </p>
