--- a/cw.html
+++ b/cw.html
@@ -9,10 +9,13 @@ title: Creative Writing
 <br/><br/>
 <b>Weekly Essays</b><br/>
 An essay per week for 50 weeks.
-<form name="mailinglist" netlify>
+<form name="mailinglist" netlify netlify-honeypot="bot-field">
   <p style="font-size: 16px; line-height:24px; font-weight: bold;">
     <i>Join the list and get an essay by email every week.</i>
     <br/>
+    <p style="display:none;">
+      <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+    </p>
     <label> <input type="email" name="email" default="Your@email" /></label>
 
     <button type="submit">Join</button>
