--- a/cw.html
+++ b/cw.html
@@ -11,12 +11,11 @@ title: Creative Writing
 An essay per week for 50 weeks.
 <form name="mailinglist" netlify netlify-honeypot="bot-field">
   <p style="font-size: 16px; line-height:24px; font-weight: bold;">
-    <i>Join the list and get an essay by email every week.</i>
-    <br/>
-    <p style="display:none;">
+    <i>New! Join the list and get an essay by email every week.</i>
+    <span style="display:none;">
       <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
-    </p>
-    <label> <input type="email" name="email" default="Your@email" /></label>
+    </span>
+    <label> <input type="email" name="email" value="Your@email" /></label>
 
     <button type="submit">Join</button>
   </p>
