--- a/cw.html
+++ b/cw.html
@@ -15,11 +15,15 @@ An essay per week for 50 weeks.
     <span style="display:none;">
       <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
     </span>
-    <label> <input type="email" name="email" value="Your@email" /></label>
 
     <button type="submit">Join</button>
   </p>
 </form>
+
+<p>
+  <span style="font-size: 14px;">26 May 2021 </span><br/><a href="writing/no-flowers"><b>"No Flowers"</b></a><br/>
+  <i>I open my curtain and the sky is bright blue. Very few clouds. I stretch and sit in front of my computer. Turn on the screen. It’s covered with Instant Messages....</i>
+</p>
 
 <p>
   <span style="font-size: 14px;">19 May 2021 </span><br/><a href="writing/how-not-to"><b>"How Not to Impress a Magician"</b></a><br/>
