--- a/writing/no-flowers.html
+++ b/writing/no-flowers.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: How Not to Impress a Magician
+title: No Flowers
 ---
 <h3>No Flowers</h3
 <p/>
@@ -36,7 +36,7 @@ title: How Not to Impress a Magician
 <p></p>
 <p>*  *  *</p>
 <p></p>
-<p>Barry, my mom’s first cousin, was a florist. His shop on the south shore of Long Island, tucked into a strip mall, was called, elegantly, Jardin des Fleurs. He told stories about going to the flower market in Manhattan every week, leaving early and getting home before anyone else was awake. He bitched about his customers, about 1-800-FLOWERS stealing his business, about how people in general just didn’t know how to do things formally anymore.  No elegance. </p>
+<p>Barry, my mom’s first cousin, was a florist. His shop on the south shore of Long Island, tucked into a strip mall, was called, elegantly, <i>Jardin des Fleurs.</i> He told stories about going to the flower market in Manhattan every week, leaving early and getting home before anyone else was awake. He bitched about his customers, about 1-800-FLOWERS stealing his business, about how people in general just didn’t know how to do things formally anymore.  No elegance. </p>
 <p></p>
 <p>He would come to holiday dinners in his work clothes, change as soon as he got there, and deftly place his arrangement in the middle of our table, always perfectly tailored to the season, mood, and my mom’s tastes.</p>
 <p></p>
