--- a/cw.html
+++ b/cw.html
@@ -15,6 +15,7 @@ An essay per week for 50 weeks.
     <span style="display:none;">
       <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
     </span>
+    <label> <input type="email" name="email" value="Your@email" /></label>
 
     <button type="submit">Join</button>
   </p>
