--- a/cw.html
+++ b/cw.html
@@ -22,43 +22,48 @@ An essay per week for 50 weeks.
 </form>
 
 <p>
-  <span style="font-size: 14px;">26 May 2021 </span><br/><a href="writing/no-flowers"><b>"No Flowers"</b></a><br/>
+  <span style="font-size: 14px;">#09: 02 June 2021 </span><br/><a href="writing/seven-reviews"><b>"Seven Restaurant Reviews"</b></a><br/>
+  <i>Thousands of pinholes ripple across a deep gray-black background, releasing faint beams of pure white light, until the whole scene is gently washed away and replaced with the visual confirmation that I’ve just been punched in the face...</i>
+</p>
+
+<p>
+  <span style="font-size: 14px;">#08: 26 May 2021 </span><br/><a href="writing/no-flowers"><b>"No Flowers"</b></a><br/>
   <i>I open my curtain and the sky is bright blue. Very few clouds. I stretch and sit in front of my computer. Turn on the screen. It’s covered with Instant Messages....</i>
 </p>
 
 <p>
-  <span style="font-size: 14px;">19 May 2021 </span><br/><a href="writing/how-not-to"><b>"How Not to Impress a Magician"</b></a><br/>
+  <span style="font-size: 14px;">#07: 19 May 2021 </span><br/><a href="writing/how-not-to"><b>"How Not to Impress a Magician"</b></a><br/>
   <i>The word that makes me realize I don’t know every word is abattoir...</i>
 </p>
 
 
 <p>
-  <span style="font-size: 14px;">12 May 2021 </span><br/><a href="writing/something-invisible"><b>"Something Invisible"</b></a><br/>
+  <span style="font-size: 14px;">#06: 12 May 2021 </span><br/><a href="writing/something-invisible"><b>"Something Invisible"</b></a><br/>
   <i>Scotty McTape, the rascally-but-helpful, tartan-clad, kilt-wearing kid, was the 1940s era mascot for 3M’s adhesive products, which were named "Scotch" to invoke a stereotype based on Scottish nationality...</i>
 </p>
 
 <p>
-  <span style="font-size: 14px;">5 May 2021 </span><br/><a href="writing/we-all-grow-eyes"><b>"We All Grow Eyes"</b></a><br/>
+  <span style="font-size: 14px;">#05: 5 May 2021 </span><br/><a href="writing/we-all-grow-eyes"><b>"We All Grow Eyes"</b></a><br/>
   <i>In the early 90s on Sundays my Dad and I drive into Manhattan from south shore Long Island to do the one thing we can always do happily together — eat...</i>
 </p>
 
 <p>
-  <span style="font-size: 14px;">28 April 2021 </span><br/><a href="writing/the-taste"><b>"The Taste of the Himalayas"</b></a><br/>
+  <span style="font-size: 14px;">#04: 28 April 2021 </span><br/><a href="writing/the-taste"><b>"The Taste of the Himalayas"</b></a><br/>
   <i>I thought Coors Light tasted like Nag Champa from the age of 13, when I took my first sip in my friend George’s room, suffocatingly thick with smoke from incense...</i>
 </p>
 
 <p>
-  <span style="font-size: 14px;">21 April 2021</span><br/> <a href="writing/preserved-lemons"><b>"Preserved Lemons"</b></a><br/>
+  <span style="font-size: 14px;">#03: 21 April 2021</span><br/> <a href="writing/preserved-lemons"><b>"Preserved Lemons"</b></a><br/>
   <i>The first time I dropped a mug and broke it, I was shocked by the lack of drama. Thick, factory made ceramic breaks nothing like dropping a glass...</i>
 </p>
 
 <p>
-  <span style="font-size: 14px;">14 April 2021 </span><br/><a href="writing/built-for-dreaming"><b>"Built for Dreaming"</b></a><br/>
+  <span style="font-size: 14px;">#02: 14 April 2021 </span><br/><a href="writing/built-for-dreaming"><b>"Built for Dreaming"</b></a><br/>
   <i>I learn how to ride a bicycle when we remove my training wheels and my brother balances me at the top of the driveway and lets me go...</i>
 </p>
 
 <p>
-  <span style="font-size: 14px;">07 April 2021</span><br/><a href="writing/10-rules"><b>"10 Rules for Editing Personal Essays"</b></a><br/>
+  <span style="font-size: 14px;">#01: 07 April 2021</span><br/><a href="writing/10-rules"><b>"10 Rules for Editing Personal Essays"</b></a><br/>
   <i>Caring for a Raspberry bushes is confusing — they’re not like other plants. Applying the same rules to Rubus that you do to any other plant is asking for trouble...</i>
 </p>
 
