--- a/writing/no-flowers.html
+++ b/writing/no-flowers.html
@@ -2,7 +2,7 @@
 layout: default
 title: No Flowers
 ---
-<h3>No Flowers</h3
+<h3>No Flowers</h3>
 <p/>
 <p>I open my curtain and the sky is bright blue. Very few clouds. I stretch and sit in front of my computer. Turn on the screen. It’s covered with Instant Messages.</p>
 <p></p>
