--- a/cw.html
+++ b/cw.html
@@ -22,6 +22,12 @@ An essay per week for 50 weeks.
 </form>
 
 <p>
+  <span style="font-size: 14px;">#10: 09 June 2021 </span><br/><a href="writing/a-different-knob"><b>"A Different Knob"</b></a><br/>
+
+  <i>"It's part of your job to speak to people up close," he says, dropping a tin of mints on my desk. It strikes, and a pleasantly resonant rattling sound rings out. It takes its time to get to silence. I look up and smile.</i>
+</p>
+
+<p>
   <span style="font-size: 14px;">#09: 02 June 2021 </span><br/><a href="writing/seven-reviews"><b>"Seven Restaurant Reviews"</b></a><br/>
   <i>Thousands of pinholes ripple across a deep gray-black background, releasing faint beams of pure white light, until the whole scene is gently washed away and replaced with the visual confirmation that I’ve just been punched in the face...</i>
 </p>
