--- a/writing/venice.html
+++ b/writing/venice.html
@@ -14,8 +14,8 @@ fortified and aluminized.<br/><br/>
 Alloys,<br/>
 false purity,<br/>
 a sense of cents,<br/>
-  of calm and spray<br/>
-  freedom of enterprise.<br/><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; of calm and spray,<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; freedom of enterprise.<br/><br/>
 
 A sleeper cell,<br/> to asleep to sell.<br/><br/>
 
