--- a/writing/venice.html
+++ b/writing/venice.html
@@ -17,7 +17,7 @@ a sense of cents,<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; of calm and spray,<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; freedom of enterprise.<br/><br/>
 
-A sleeper cell,<br/> to asleep to sell.<br/><br/>
+A sleeper cell,<br/> too asleep to sell.<br/><br/>
 
 Elements,<br/>
 elements,<br/>
